@@ -89,7 +89,7 @@
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories=""
-				DelayLoadDLLs="OpenMPT_soundtouch.dll"
+				DelayLoadDLLs="OpenMPT_SoundTouch_i16.dll"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
 				ProgramDatabaseFile=".\Debug/mptrack.pdb"
@@ -195,7 +195,7 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories=""
-				DelayLoadDLLs="OpenMPT_soundtouch.dll"
+				DelayLoadDLLs="OpenMPT_SoundTouch_i16.dll"
 				GenerateDebugInformation="true"
 				GenerateMapFile="false"
 				MapFileName=".\Release/mptrack.map"
