@@ -13,9 +13,9 @@
 
 //Version definitions. The only thing that needs to be changed when changing version number.
 #define VER_MAJORMAJOR				1
-#define VER_MAJOR					17
-#define VER_MINOR					03
-#define VER_MINORMINOR				03
+#define VER_MAJOR					18
+#define VER_MINOR					00
+#define VER_MINORMINOR				00
 
 //Creates version number from version parts that appears in version string.
 //For example MAKE_VERSION_NUMERIC(1,17,02,28) gives version number of 
